scss/_header.scss
.logo-nav {
  padding: 40px 0 0;

  .navbar-brand {
    color: #fff;
    &:hover {
      color: #fff;
    }

    img {
      margin-right: 28px;
    }
  }
  .navbar-nav li {
    text-transform: uppercase;
    &:not(:last-child) {
      margin-right: 50px;
    }

    a {
      padding: 20px 24px;
      white-space: nowrap;

      color: #fff;
      &:hover {
        color: $c-1;
      }

      &.cta {
        background-color: $c-1;
        border-radius: 5px;
        border: 1px solid $c-1;
        &:hover {
          color: $c-1;
          background-color: $c-2;
        }
        transition: background-color 0.3s ease, color 0.3s ease;
      }
    }
  }
}

